test/fail/refutable-import.mo
import { why = 42 } = "nat-module";

//SKIP run
//SKIP run-low
//SKIP comp
